# FKSFold

./: .gitignore  README.md  chai_lab_explore.ipynb  cif_to_fasta.py  pyproject.toml  requirements.in
examples/: 8PPZ.cif  8PPZ.fasta  8VL9.cif  8VL9.fasta  9BW_lig.sdf  9nfr_clean.cif  center_10_macro_2.cif  center_14_macro_2.cif  center_14_macro_2_L42_rank1.pse  glue_example.fasta  ligand_steer.pse  multi_gpu.py  parts.sdf  pred.model_idx_0_8VL9.cif  predict_structure_fks.py  rdkit_test.ipynb  state1.cif  state2.cif  state3.cif  state4.cif  strucure_convert.py
examples/result/tmp_09079efe-bdf5-4304-91da-3ca95a0d313e/: Ripk1_VHL.fasta
examples/result/tmp_09079efe-bdf5-4304-91da-3ca95a0d313e/outputs_0.5/: pred.model_idx_0.cif  scores.model_idx_0.npz
examples/result/tmp_2cf92edb-39de-4daa-b422-a2409002821e/outputs_0.5/: pred.model_idx_0.cif  scores.model_idx_0.npz
examples/result/tmp_30945b3c-c6c6-45cf-9559-bc1d61c8c7a9/outputs_0.8/: pred.model_idx_0.cif  scores.model_idx_0.npz
examples/result/tmp_3744f1b7-da94-45e4-9c4f-989a6b070aa1/outputs_0.5/: pred.model_idx_0.cif  scores.model_idx_0.npz
examples/result/tmp_59e51113-eea5-4f88-8cd9-04bf6dcc1418/outputs_0.6/: pred.model_idx_0.cif  scores.model_idx_0.npz
examples/result/tmp_859cce0d-c177-4291-aa24-fe266e93e4e2/outputs_0.8/: pred.model_idx_0.cif  scores.model_idx_0.npz
fksfold/: __init__.py  biopandas_patch.py  chai_fks.py  config.py  main.py  mol_utils.py  utils.py
state3_L42/: L42.smi  Ripk1_VHL.fasta  align_all.py
(+6 files in other folders)
